adding description to the sections, to do EFT and plot edit

--- a/biblio.bib
+++ b/biblio.bib
@@ -1140,3 +1140,12 @@ author = {{A. Salam and J.C. Ward}}
       year          = "2018",
       url           = "https://cds.cern.ch/record/2652447",
 }
+@article{pValueStat,
+  doi = {10.48550/ARXIV.PHYSICS/0605123},
+  url = {https://arxiv.org/abs/physics/0605123},
+  author = {{Gagunashvili, N. D.}},
+  title = {{Comparison of weighted and unweighted histograms}},
+  publisher = {arXiv},
+  year = {2006},
+  copyright = {Assumed arXiv.org perpetual, non-exclusive license to distribute this article for submissions made before January 2004}
+}
